k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-lab-app
  namespace: akslab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: akslab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aks-lab-app
                port:
                  number: 80
